# real-time-seating-app-ML

./: .gitignore  .vercelignore  API_ENDPOINTS.md  FRONTEND_INTEGRATION.md  README.md  SUPABASE_SETUP.md  api_guide.md  api_test.html  clean_cache.py  config.py  copy_models.sh  data_analysis.py  database.py  frontend_api_guide.md  install_minimal.sh  last_run.txt  main.py  ml_models.py  pyproject.toml  requirements.txt  scheduler.py  start_server.py  train_ml_models.py  vercel.json
.vercel/: config.json
api/: health.py  index.py  predictions-today-tomorrow.py  predictions-weekly-average.py  requirements.txt  sitecustomize.py
api/predictions/: today-tomorrow.py  weekly-average.py
documents/: API_ENDPOINTS.md
public/: test-api.html
src/: __init__.py
src/api/: __init__.py  density_model.joblib  health.py  include_models.py  index.py  model_performance.joblib  predictions_today_tomorrow.py  predictions_weekly_average.py  seats_model.joblib  simple.py  supabase_sync.py  test.py
src/ml/: __init__.py  data_analysis.py  ml_models.py  train_ml_models.py
src/models/: best_params.joblib
src/utils/: database.py
