[project]
name = "real-time-seating-app-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "optuna>=4.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "supabase>=2.15.3",
    "uvicorn>=0.34.3",
]
